# Scratchy

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Findglad.cmake  Findglfw3.cmake  Findopengl_system.cmake  README.md  Scratchy.sln  Scratchy.vcxproj  Scratchy.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  conan_paths.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conanbuildinfo_debug.cmake  conanbuildinfo_multi.cmake  conanbuildinfo_release.cmake  conanfile.txt
Scratchy.dir/Debug/: Scratchy.exe.recipe
Scratchy.dir/Debug/Scratchy.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Shaders/Fragment/: color.fs  texture.fs
Shaders/Vertex/: color.vs  texture.vs  triangle_colored.vs
Sources/: main.cpp
Sources/Main/: Camera.cpp  Camera.h  Viewport.cpp  Viewport.h  Window.cpp  Window.h
Sources/Mesh/: Cube.cpp  Cube.h  IMesh.h  Mesh.cpp  Mesh.h  Rect.cpp  Rect.h  Shader.cpp  Shader.h  Square.cpp  Square.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h
Sources/Mesh/Primitives/: Cube.cpp  Cube.h  Rect.cpp  Rect.h  Triangle.cpp  Triangle.h
Sources/Utils/: Angle.cpp  Angle.h  Color.cpp  Color.h  Position2.cpp  Position2.h  Position3.cpp  Position3.h  Vector2.cpp  Vector2.h
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
